Updated styling to work on smaller screens

--- a/petfeeder-vite/src/styles/Calendar.css
+++ b/petfeeder-vite/src/styles/Calendar.css
@@ -87,6 +87,7 @@
   .react-calendar {
     padding: 0.5rem;
     font-size: 0.95rem;
+    margin: 0.5rem 0.5rem 0.25rem 0.5rem;
   }
   .react-calendar__navigation button {
     font-size: 1rem;
