--- a/petfeeder-vite/src/styles/CalendarPopup.css
+++ b/petfeeder-vite/src/styles/CalendarPopup.css
@@ -33,7 +33,7 @@
   border-radius: 10px;
   padding: 1rem;
   margin-top: 1rem;
-  width: 320px;
+  width: 360px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   animation: fadeInUp 0.4s ease;
 }
@@ -59,10 +59,22 @@
   padding-left: 0.5rem;
 }
 
+.checkbox-row {
+  display: flex;
+  align-items: center;
+  margin-top: 0.3rem;
+}
+
+.checkbox-row label {
+  margin-left: 0.2rem;
+  font-size: 0.95rem;
+  color: #651f7f;
+}
+
 .day-details p {
   font-size: 1.1rem;
   color: #353333c9;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.2rem;
 }
 
 .day-details label {
@@ -82,10 +94,15 @@
   color: #651f7f;
   font-size: 0.95rem;
   margin-top: 0.2rem;
+  margin-left: 0.5rem;
+  outline: #a06ebc;
 }
 
 .was-fed-button {
   margin-top: 0.3rem;
+  border-radius: 10px;
+  border: 1px solicd #f875f8b3;
+  background-color: #ffffff;
 }
 
 .save-button {
