--- a/petfeeder-vite/src/styles/CalendarPopup.css
+++ b/petfeeder-vite/src/styles/CalendarPopup.css
@@ -183,6 +183,8 @@
   .save-button-popup {
     font-size: 0.8rem;
     padding: 0.2rem 0.4rem;
+    min-height: 5vh;
+    max-height: 15vh;
     margin-top: 1rem;
   }
 }
